...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_main_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:background="@color/light_grey"
            android:contentDescription="@string/detail_poster_header"
            android:scaleType="centerCrop"
...
            app:layout_constraintBottom_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/line"
            app:layout_constraintVertical_bias="0.3">

            <ImageView
                android:id="@+id/iv_main_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/light_grey"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY"
...
                app:layout_constraintVertical_bias="0.3"
                tools:src="@drawable/poster_wonder_woman" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_main_title"
            style="@style/txtGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
...
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toTopOf="@id/line"
            tools:text="Wonder Woman 1984" />

        <TextView
            android:id="@+id/tv_main_year"
            style="@style/txtGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
...
            android:contentDescription="@string/image_rating"
            android:src="@drawable/ic_baseline_star"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_main_year" />

        <TextView
            android:id="@+id/tv_main_rating"
            style="@style/txtGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating"
...
            android:src="@drawable/ic_runtime"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_main_rating"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_main_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/iv_runtime"
            app:layout_constraintStart_toEndOf="@id/iv_runtime"
            app:layout_constraintTop_toTopOf="@id/iv_runtime"
            tools:text="Runtime" />

        <TextView
            android:id="@+id/tv_main_genre"
            style="@style/txtGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
...
            app:cpb_progressbar_width="5dp"
            app:cpb_round_border="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_poster" />

        <TextView
            android:id="@+id/tv_main_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/text_popularity"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tv_main_popularity"
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/circular_rating" />

        <TextView
            android:id="@+id/tv_main_popularity"
            android:layout_width="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circular_rating" />

        <TextView
            android:id="@+id/tv_main_description"
            style="@style/txtGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="2dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_overview"
            tools:targetApi="O"
            tools:text="@string/text_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
...
