...
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:scrollbars="none"
    tools:context=".ui.fragment.movies.MoviesFragment">

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_animation"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
