...
    android:layout_height="match_parent"
    android:id="@+id/fragment_tv_series"
    android:background="@color/white"
    tools:context=".ui.home.tvseries.TvSeriesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tvseries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
