<resources>
    <string name="app_name">Movie Now</string>
    <string name="movies">MOVIES</string>
    <string name="tv_series">TV SERIES</string>
    <string name="bg_header_gradient">bg_header_gradient</string>
    <string name="poster">Poster</string>
    <string name="detail_poster_header">Detail Poster Header</string>
    <string name="button_back_from_detail">Button Back From Detail</string>
    <string name="main_background">Main Background</string>
    <string name="overview">Overview</string>
...
